[package]
name = "blindforest"
version = "0.1.0"
edition = "2021"
description = "Hash-based blind signatures using ZKBoo proofs"
license = "MIT"

[features]
default = ["std"]
std = []
parallel = ["std", "rayon"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
cipher = { version = "0.4", default-features = false, features = ["block-padding"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
zeroize = { version = "1", default-features = false, features = ["derive"] }
subtle = { version = "2", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
hex-literal = "0.4"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false
